# Interfaces

./: CMakeLists.txt
pot/: CMakeLists.txt
pot/include/pot/: stack.h
pot/src/pot/: stack.c
unittests/: CMakeLists.txt
unittests/src/: main.c
